Fixed first menu-item not being clickable on mobile

--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -245,7 +245,7 @@ dt {
   top: 0px;
   left: 0px;
   padding: 20px;
-  height: auto;
+  //height: auto;
   z-index: 3;
   @include breakpoint(medium down) {
     width: 100%;
@@ -256,7 +256,7 @@ dt {
   @include breakpoint(medium down) {
     left: 0;
     top: 0;
-    z-index: -10;
+    z-index: -1;
     width: 100%;
     padding-top: 2.1em;
     padding-bottom: 0.8em;
@@ -323,14 +323,28 @@ dt {
 .asterisk {
   font-size: 3.2rem;
   font-weight: bold;
-  float: left;
-  line-height: 1;
-  height: 100%;
+  //float: left;
+  line-height: 0.7em;
+  verticaly-align: text-bottom;
+  //height: 100%;
   width: 2.5em;
   @include breakpoint(medium down) {
     display: block;
     width: 100%;
   }
+  height: 0.4em;
+  overflow: hidden;
+}
+
+.asterisk div {
+  float: left;
+  vertical-algin: bottom;
+  height: 0.4em;
+}
+
+.asterisk-symbol {
+  height: 0.4em;
+  padding-top: 0.15em;
 }
 
 .asterisk:hover {
@@ -338,11 +352,12 @@ dt {
 }
 
 #menu-logo {
+  float: left;
   display: none;
   height: 0.5em;
   width: 1.837em;
   margin-left: 0.1em;
-  margin-top: -0.4em;
+  //margin-top: -0.4em;
   @extend .menu-shadow;
 }
 
